	Renamed as tools/check-header.c and set it as ignored by git.

	* src/test/.gitignore:
	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

2011-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-run.c:
	* src/utils/nautilus-actions-schemas.c: Add locale.h include.

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.h (base_iprefs_get_int, base_iprefs_set_int):
	Remove deprecated functions.

	* src/nact/nact-icon-chooser.c (instance_dispose, on_base_runtime_init_dialog):
	* src/nact/nact-main-window.c (instance_dispose, on_base_initial_load_toplevel):
	Updated accordingly.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h (nact_iprefs_migrate_key): Remove deprecated function.

	* src/nact/nact-icommand-tab.c (nact_icommand_tab_initial_load_toplevel):
	Updated accordingly.

	Global renaming of preferences.

	* README-GCONF:
	* src/api/na-iio-provider.h:
	* src/core/na-export-format.h:
	* src/core/na-exporter.h:
	* src/core/na-importer-ask.h:
	* src/core/na-importer.c:
	* src/core/na-io-provider.c:
	* src/core/na-io-provider.h:
	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/core/na-module.c:
	* src/core/na-pivot.c:
	* src/core/na-pivot.h:
	* src/core/na-settings.c:
	* src/core/na-settings.h:
	* src/core/na-updater.c:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-iactions-list.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-main-menubar-edit.c:
	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-menubar.c:
	* src/nact/nact-main-toolbar.c: