@@ -186,84 +186,3 @@ nact_iprefs_set_export_format( const BaseWindow *window, const gchar *name, GQua
 		na_settings_set_string( settings, name, g_quark_to_string( format ));
 	}
 }
-
-/**
- * nact_iprefs_write_bool:
- * @window: this #BaseWindow-derived window.
- * @name: the preference entry.
- * @value: the value to be written.
- *
- * Writes the given boolean value.
- */
-void
-nact_iprefs_write_bool( const BaseWindow *window, const gchar *name, gboolean value )
-{
-	NactApplication *application;
-	NAUpdater *updater;
-	NASettings *settings;
-
-	g_return_if_fail( BASE_IS_WINDOW( window ));
-	g_return_if_fail( NACT_IS_IPREFS( window ));
-
-	if( st_initialized && !st_finalized ){
-
-		application = NACT_APPLICATION( base_window_get_application( window ));
-		updater = nact_application_get_updater( application );
-		settings = na_pivot_get_settings( NA_PIVOT( updater ));
-		na_settings_set_boolean( settings, name, value );
-	}
-}
-
-/**
- * nact_iprefs_write_uint:
- * @window: this #BaseWindow-derived window.
- * @name: the preference entry.
- * @value: the value to be written.
- *
- * Writes the given uint value.
- */
-void
-nact_iprefs_write_uint( const BaseWindow *window, const gchar *name, guint value )
-{
-	NactApplication *application;
-	NAUpdater *updater;
-	NASettings *settings;
-
-	g_return_if_fail( BASE_IS_WINDOW( window ));
-	g_return_if_fail( NACT_IS_IPREFS( window ));
-
-	if( st_initialized && !st_finalized ){
-
-		application = NACT_APPLICATION( base_window_get_application( window ));
-		updater = nact_application_get_updater( application );
-		settings = na_pivot_get_settings( NA_PIVOT( updater ));
-		na_settings_set_uint( settings, name, value );
-	}
-}
-
-/**
- * nact_iprefs_write_string:
- * @window: this #BaseWindow-derived window.
- * @name: the preference key.
- * @value: the value to be written.
- *
- * Writes the value as the given GConf preference.
- */
-void
-nact_iprefs_write_string( const BaseWindow *window, const gchar *name, const gchar *value )
-{
-	NactApplication *application;
-	NAUpdater *updater;
-	NASettings *settings;
-
-	g_return_if_fail( BASE_IS_WINDOW( window ));
-	g_return_if_fail( NACT_IS_IPREFS( window ));
-
-	if( st_initialized && !st_finalized ){
-
-		application = NACT_APPLICATION( base_window_get_application( window ));
-		updater = nact_application_get_updater( application );
-		settings = na_pivot_get_settings( NA_PIVOT( updater ));
-		na_settings_set_string( settings, name, value );
-	}
-}
