@@ -29,6 +29,13 @@
 	* src/utils/nautilus-actions-run.c:
 	* src/utils/nautilus-actions-schemas.c: Add locale.h include.
 
+	* src/nact/nact-iprefs.c:
+	* src/nact/nact-iprefs.h (nact_iprefs_write_bool, nact_iprefs_write_uint,
+	nact_iprefs_write_string): Remove deprecated functions.
+
+	* src/nact/nact-main-toolbar.c (nact_main_toolbar_activate):
+	Updated accordingly.
+
 	* src/nact/base-iprefs.c:
 	* src/nact/base-iprefs.h (base_iprefs_get_int, base_iprefs_set_int):
 	Remove deprecated functions.
